--- a/Quanlinhahang/Views/Home/Datban.cshtml
+++ b/Quanlinhahang/Views/Home/Datban.cshtml
@@ -10,11 +10,11 @@
         <!-- ========== TÓM TẮT ĐƠN HÀNG (LẤY TỪ TRANG MENU) ========== -->
         <section class="order-summary">
             <div class="summary-header">
-                <div class="summary-col">#</div>
-                <div class="summary-col">Món ăn</div>
-                <div class="summary-col">Giá</div>
-                <div class="summary-col">SL</div>
-                <div class="summary-col">Thành tiền</div>
+                <div>#</div>
+                <div>Món ăn</div>
+                <div>Giá</div>
+                <div>SL</div>
+                <div>Thành tiền</div>
             </div>
 
             <div class="summary-body" id="summaryBody">
