--- a/Quanlinhahang/Views/Shared/_Footer.cshtml
+++ b/Quanlinhahang/Views/Shared/_Footer.cshtml
@@ -12,16 +12,16 @@
 
             <div class="footer-section">
                 <h4>Giờ Mở Cửa</h4>
-                <p>Thứ 2 - Thứ 6: 11:00 - 22:00</p>
-                <p>Thứ 7 - Chủ Nhật: 10:00 - 23:00</p>
+                <p>Trưa: 11:00 - 13:30</p>
+                <p>Tối: 18:00 - 21:30</p>
             </div>
 
             <div class="footer-section">
                 <h4>Theo Dõi Chúng Tôi</h4>
                 <p>
-                    <a href="#">Facebook</a> |
-                    <a href="#">Instagram</a> |
-                    <a href="#">Twitter</a>
+                    <a href="#">ⓕ Facebook</a> |
+                    <a href="#">🅾 Instagram</a> |
+                    <a href="#">▶️ YouTube</a>
                 </p>
             </div>
         </div>
