--- a/Quanlinhahang/Views/Shared/_Footer.cshtml
+++ b/Quanlinhahang/Views/Shared/_Footer.cshtml
@@ -14,6 +14,7 @@
                 <h4>Giờ Mở Cửa</h4>
                 <p>Trưa: 11:00 - 13:30</p>
                 <p>Tối: 18:00 - 21:30</p>
+                <p>Tất cả các ngày trong tuần</p>
             </div>
 
             <div class="footer-section">
