--- a/Quanlinhahang/Views/Shared/_Navbar.cshtml
+++ b/Quanlinhahang/Views/Shared/_Navbar.cshtml
@@ -64,7 +64,7 @@
 
             <div class="register-link">
                 Chưa có tài khoản?
-                <a>Đăng ký ngay</a>
+                <a asp-controller="Account" asp-action="Dangki" class="btn-link">Đăng ký ngay</a>
             </div>
         </form>
     </div>
