--- a/Quanlinhahang/Views/Home/Menu.cshtml
+++ b/Quanlinhahang/Views/Home/Menu.cshtml
@@ -33,8 +33,7 @@
 
     <div class="header-right">
         <button class="cart-btn" id="cartBtn">
-            🛒Giỏ hàng
-            <span id="cart-count">0</span>
+            <span class="cart-icon-text">🛒Giỏ hàng</span> <span id="cart-count">0</span>
         </button>
     </div>
 </header>
