--- a/Quanlinhahang/wwwroot/css/datban.css
+++ b/Quanlinhahang/wwwroot/css/datban.css
@@ -285,6 +285,7 @@ body {
         width: 100%;
         max-width: 480px;
         border: 1px solid var(--border-color);
+        padding-bottom: 30px;
     }
 
     #bookingModal .modal-icon {
@@ -312,6 +313,7 @@ body {
     }
 
     #bookingModal .btn-close {
+        display: inline-block;
         background: var(--primary-color);
         color: #000;
         padding: 10px 30px;
@@ -320,6 +322,7 @@ body {
         cursor: pointer;
         font-weight: 700;
         transition: 0.2s;
+        width: 85%;
     }
 
         #bookingModal .btn-close:hover {
