--- a/Quanlinhahang/Views/Home/Menu.cshtml
+++ b/Quanlinhahang/Views/Home/Menu.cshtml
@@ -40,7 +40,7 @@
 
 
 <!-- ========== NỘI DUNG CHÍNH ========== -->
-<div class="container">
+<div class="container-menu">
     <!-- ====== SECTION COMBO ====== -->
     <section class="menu-section" id="combo-section">
         <h2>Combo đặc biệt</h2>
