--- a/Quanlinhahang/Views/Account/History.cshtml
+++ b/Quanlinhahang/Views/Account/History.cshtml
@@ -17,6 +17,7 @@
             <button class="history-tab-item" data-status="đã xác nhận">Đã xác nhận</button>
             <button class="history-tab-item" data-status="đang phục vụ">Đang phục vụ</button>
             <button class="history-tab-item" data-status="đã thanh toán">Đã thanh toán</button>
+            <button class="history-tab-item" data-status="đã hủy">Đã hủy</button>
         </nav>
 
         <div class="history-content">
