--- a/Quanlinhahang/Views/Home/Gioithieu.cshtml
+++ b/Quanlinhahang/Views/Home/Gioithieu.cshtml
@@ -125,7 +125,7 @@
             <div class="gallery-item"><img src="~/anh/anh7.jpg" alt="Món ăn 4" /></div>
             <div class="gallery-item"><img src="~/anh/anh8.jpg" alt="Món ăn 5" /></div>
             <div class="gallery-item"><img src="~/anh/anh9.jpg" alt="Món ăn 6" /></div>
-        </div>
+        </div>  
     </div>
 </section>
 
@@ -134,7 +134,7 @@
     <div class="container">
         <h2>Trải Nghiệm Hương Vị Đẳng Cấp</h2>
         <p>Đặt bàn ngay hôm nay để khám phá hành trình ẩm thực độc đáo</p>
-        <a asp-controller="Home" asp-action="DatBan">
+        <a asp-controller="Home" asp-action="Menu">
             <button class="cta-button">Đặt Bàn Ngay</button>
         </a>
     </div>
